--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "joi": "^17.6.0",
     "joi-password-complexity": "^5.1.0",
     "jwt-decode": "^3.1.2",
+    "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.23",
